@@ -28,7 +28,6 @@
 /*! \file
  *  \brief The infrastructure for implementing properties
  *
- *  \todo Variant doesn't support a generic vector of data, i.e. VectorData\<Variant\> or VectorData\<Propertized*\>
  *
  */
 
