@@ -1,4 +1,3 @@
-
 ======= 0.7.0 Release =======
  * Summary of important changes
     - added Outer-product, thanks to Francesco
