@@ -14,6 +14,13 @@ S <mave> comment goes here
     'B' : means a BugFix
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
+
+    ==> 192 - 20/04/2007 - 0.8.1 release <==
+
++ <mave> added two method for convenience: BaseNeuralNet::addInputCluster and addOutputCluster
+- <mave> removed template method BaseNeuralNet::byName
+C <mave> moved VectorData::sum() to RealVec::sum()
+
     ==> 177 - 20/04/2007 - 0.8.0 release <==
 
 C <mave> Cluster::size() renamed into numNeurons()
